src/index.css
/**GLOBAL STYLES**/

body {
  margin: 0;
  display: flex;
  justify-content: center;
  min-width: 320px;
  min-height: 100vh;
  background-color: #E8EFF7;
}

/*root is like "main" and these are the original VITE styles; customized in App.css*/
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
    
}

/* a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
} */


h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

h5 {
  margin: auto;
}

ul {
  list-style: none;
}

.overview {
  background: #C8CDE0;
  padding: 15px;
  margin-bottom: 20px;
  border-radius: 5px;
  /* box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px; */

}

/*Filter chips and tag styles*/
.filter-div {
  display: inline-flex;
}

/*Styles filter chips*/
label { 
  padding: 3px 6px;
  border-radius: 20px;
  font-family: 'Archivo Black', sans-serif;
  font-size: 1rem;
  margin: 5px;
  background-color: #453E4F;
  box-shadow: none;
  cursor: pointer;
  transition: border-color 0.25s;
  color: white;
  display: inline-block;
  position: relative;
}

/*Style checkboxes*/
/* input[type=checkbox] {
  appearance: none;
} */

.checkbox > span {
  padding: 0.5rem 0.25rem;
}

.checkbox > input {
  display: none;
  
}

.checkbox > input:checked {
  border: none;
  display: inline-block;
  background-color: #e1b14c;
  width: 5px;
  height: 0px; 
}

.checkbox > input:checked + span::before {
  content: '\2713';
  display: inline-block;
  text-align: center;
  color: #41B883;
  position: absolute;
  left: 0.3rem;
  top: 0.1rem;
  font-size: 20px;
  
}

.checkbox > input:active {
  border: none;
}


label:hover {
  /* background-color: #cac4d1; */
  /* background-color: #ac80a0; */
  border: 3px solid blue;
}


.checked-styles {
  /* background-color: #ac80a0; */
  /* background: #AC81F7; */
  background-color: #e1b14c;
  color: black;
}
  


.unchecked-styles {
  background-color: #453E4F;
  border: none;
}


  
/*Styles tags in resource card*/

#tagsContainer ul {
  display: flex;
  padding: 0;
}

#tagsContainer ul li {
  background-color: lavenderblush;
  border: 2px solid black;
  padding: 3px 6px;
  border-radius: 5px;
  margin: 5px;
  
}

/*Button styles*/

/* button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
} */

button {
  padding: 3px 6px;
  border-radius: 5px;
  font-family: 'Archivo Black', sans-serif;
  font-size: 1rem;
  margin: 5px;
  /* cursor: pointer; */
  
}

button:hover {
  border: 3px solid #646cff;
}

button:active {
  background-color: gray;
}

/*Styles for resource card*/
.card {
  width: 48%;
  margin: 1em 0;
  padding: 0.5em;
  border-radius: 10px;
  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
  background-color: white;
}

#tagsContainer {
  display: flex;
  flex-flow: row wrap;
}


@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color:lightgray;
  }
} 

